# starbound-player-editor

./: .gitignore  .yarnrc.yml  Cargo.toml  package.json  player.json
node-starbound-assets/: README.md  package.json  test.js
node-starbound-assets/lib/: index.d.ts  index.js
node-starbound-assets/native/: Cargo.toml
node-starbound-assets/native/src/: lib.rs
src/: bson.rs  lib.rs  main.rs  packed.rs  vlq.rs
starbound-assets/: Cargo.toml  package.json
starbound-assets/src/: json.rs  lib.rs  main.rs  packed.rs  vlq.rs
starbound-assets/src/bson/: mod.rs  serializer.rs
viewer/: .gitignore  package.json  tsconfig.json  webpack.config.js
viewer-app/: .env.development  .eslintrc.json  .gitignore  package.json  tsconfig.json  webpack.config.js  webpack.config.overrides.js  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
viewer-app/src/: custom.d.ts  index.d.ts  index.html  index.ts  loader.ts  main.scss  main.ts  preload.ts
viewer-app/src/main/: index.ts  loader.ts
viewer-app/src/renderer/: App.vue  index.ejs  index.scss  index.ts  main.ts  pix.ts  services.d.ts  utils.ts
viewer-app/src/renderer/components/: ColorPicker.vue  Palette.vue  Player.vue
viewer-app/src/renderer/player/: PlayerSprite.ts  SpriteSheet.ts  drawing.ts  remap.ts
viewer-app/src/renderer/store/: composition.ts  index.ts
viewer-app/src/renderer/store/plugins/: events.ts
viewer-app/src/types/: custom.d.ts  player.d.ts  player.ts
viewer/src/: index.html  main.scss  main.ts
