[workspace]
members = ["node-starbound-assets/native", "starbound-assets"]
exclude = [
  "node_modules/node-starbound-assets/native",
  "node_modules/starbound-assets"
]

[patch.crates-io]
# neon-runtime = { git = "https://github.com/ajmadsen/neon" }
# neon-sys = { git = "https://github.com/ajmadsen/neon" }
# neon = { git = "https://github.com/ajmadsen/neon" }
# neon-build = { git = "https://github.com/ajmadsen/neon" }
neon-runtime = { path = "../../build/neon/crates/neon-runtime" }
neon-sys = { path = "../../build/neon/crates/neon-sys" }
neon = { path = "../../build/neon" }
neon-build = { path = "../../build/neon/crates/neon-build" }
