[workspace]
members = ["node-starbound-assets/native", "starbound-assets"]
exclude = [".yarn", "node_modules"]

[patch.crates-io]
# neon-runtime = { git = "https://github.com/ajmadsen/neon" }
# neon-sys = { git = "https://github.com/ajmadsen/neon" }
# neon = { git = "https://github.com/ajmadsen/neon" }
# neon-build = { git = "https://github.com/ajmadsen/neon" }
neon-runtime = { path = "../../build/neon/crates/neon-runtime", version = "0.4.0" }
neon-sys = { path = "../../build/neon/crates/neon-sys", version = "0.4.0" }
neon = { path = "../../build/neon", version = "0.4.0" }
neon-build = { path = "../../build/neon/crates/neon-build", version = "0.4.0" }

[profile.release]
panic = "unwind"
