[package]
name = "node-starbound-assets"
version = "0.1.0"
authors = ["Adam Madsen <madsen.adam@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_starbound_assets"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
starbound-player-editor = { path = "../../" }
neon-serde = "0.4.0"
serde_bytes = "0.11.4"
